--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "fs-extra": "^10.0.1",
     "parcel": "^2.0.0-beta.1"
+  },
+  "devDependencies": {
+    "@types/offscreencanvas": "^2019.6.4"
   }
 }
